// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Data
          </mock-styled.h1>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Support
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            Please see below for more resources.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            View Docs
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Video
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Help
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section>
          <mock-styled.h1
            classname=""
          >
            Sharing Data
          </mock-styled.h1>
          <mock-styled.p
            classname="mock-css."
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </mock-styled.p>
          <mock-styled.h2
            classname=""
          >
            Available Data
          </mock-styled.h2>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="3"
          >
            <mock-styled.div>
              <mock-styled.div>
                Name
              </mock-styled.div>
              <mock-styled.div>
                Provider
              </mock-styled.div>
              <mock-styled.div>
                Description
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    RPS Database
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Description"
                  >
                    Access to legacy data
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="mock-css."
                    >
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Create Share
                        <mock-styled.div />
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    RPS Views
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Description"
                  >
                    Access to legacy views
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="mock-css."
                    >
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Create Share
                        <mock-styled.div />
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Data Shares
          </mock-styled.h2>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="5"
          >
            <mock-styled.div>
              <mock-styled.div>
                Data Set Name
              </mock-styled.div>
              <mock-styled.div>
                Database
              </mock-styled.div>
              <mock-styled.div>
                Schema
              </mock-styled.div>
              <mock-styled.div>
                Warehouse
              </mock-styled.div>
              <mock-styled.div>
                Region
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="Data Set Name"
                  >
                    RPS Database
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.div
                    data-narrow-label="Database"
                  >
                    reapit
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Schema"
                  >
                    customers_rps_DEV
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Warehouse"
                  >
                    STANDARD_WH
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.div
                    data-narrow-label="Region"
                  >
                    eu-west-1
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                >
                  <mock-styled.span
                    classname="mock-css."
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="mock-css."
                    >
                      <mock-styled.button
                        classname="mock-css."
                      >
                        Copy URL
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                      >
                        Copy DSN
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Delete Share
                        <mock-styled.div />
                      </mock-styled.button>
                      <mock-styled.button
                        classname="mock-css."
                        disabled="false"
                      >
                        Refresh Share
                        <mock-styled.div />
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Data
        </mock-styled.h1>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.h2
          classname=""
        >
          Support
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          Please see below for more resources.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          View Docs
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Video
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Help
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section>
        <mock-styled.h1
          classname=""
        >
          Sharing Data
        </mock-styled.h1>
        <mock-styled.p
          classname="mock-css."
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </mock-styled.p>
        <mock-styled.h2
          classname=""
        >
          Available Data
        </mock-styled.h2>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="3"
        >
          <mock-styled.div>
            <mock-styled.div>
              Name
            </mock-styled.div>
            <mock-styled.div>
              Provider
            </mock-styled.div>
            <mock-styled.div>
              Description
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
                style="font-size: 1.2rem;"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  RPS Database
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Description"
                >
                  Access to legacy data
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Create Share
                      <mock-styled.div />
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  RPS Views
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Description"
                >
                  Access to legacy views
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Create Share
                      <mock-styled.div />
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Data Shares
        </mock-styled.h2>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="5"
        >
          <mock-styled.div>
            <mock-styled.div>
              Data Set Name
            </mock-styled.div>
            <mock-styled.div>
              Database
            </mock-styled.div>
            <mock-styled.div>
              Schema
            </mock-styled.div>
            <mock-styled.div>
              Warehouse
            </mock-styled.div>
            <mock-styled.div>
              Region
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname=""
                style="font-size: 1.2rem;"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Data Set Name"
                >
                  RPS Database
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.div
                  data-narrow-label="Database"
                >
                  reapit
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Schema"
                >
                  customers_rps_DEV
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Warehouse"
                >
                  STANDARD_WH
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Region"
                >
                  eu-west-1
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                    >
                      Copy URL
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                    >
                      Copy DSN
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Delete Share
                      <mock-styled.div />
                    </mock-styled.button>
                    <mock-styled.button
                      classname="mock-css."
                      disabled="false"
                    >
                      Refresh Share
                      <mock-styled.div />
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data should match a snapshot with no data and loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  flex: 1 1 auto;
"
      >
        <mock-styled.aside>
          <mock-styled.h1
            classname=""
          >
            Data
          </mock-styled.h1>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.h2
            classname=""
          >
            Support
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css."
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            Please see below for more resources.
          </mock-styled.p>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            View Docs
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Video
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
          >
            Help
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.aside>
        <mock-styled.section>
          <mock-styled.h1
            classname=""
          >
            Sharing Data
          </mock-styled.h1>
          <mock-styled.p
            classname="mock-css."
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css."
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </mock-styled.p>
          <mock-styled.h2
            classname=""
          >
            Available Data
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 2.5rem;
"
            >
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname=""
          >
            Data Shares
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.section>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  flex: 1 1 auto;
"
    >
      <mock-styled.aside>
        <mock-styled.h1
          classname=""
        >
          Data
        </mock-styled.h1>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css.
  font-size: 5rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.h2
          classname=""
        >
          Support
        </mock-styled.h2>
        <mock-styled.p
          classname="mock-css."
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          Please see below for more resources.
        </mock-styled.p>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          View Docs
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Video
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css.
  margin-bottom: 0.75rem;
 mock-css."
        >
          Help
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.aside>
      <mock-styled.section>
        <mock-styled.h1
          classname=""
        >
          Sharing Data
        </mock-styled.h1>
        <mock-styled.p
          classname="mock-css."
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css."
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </mock-styled.p>
        <mock-styled.h2
          classname=""
        >
          Available Data
        </mock-styled.h2>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname=""
        >
          Data Shares
        </mock-styled.h2>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
